add comment API added #26
